
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:rowCount="6"
            tools:context=".code.ui.TransactionActivity">

    <TextView
        android:id="@+id/account_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/account_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/account_selector"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"/>

    <TextView
        android:id="@+id/expense_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/transaction_type_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup
        android:id="@+id/expense_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1">

        <RadioButton
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/withdrawal_text"/>

        <RadioButton
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/deposit_text"/>
    </RadioGroup>

    <TextView
        android:id="@+id/amount_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/amount_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/permission_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/special_permissions"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Spinner
        android:id="@+id/permission_selector"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"/>

    <Button
        android:id="@+id/submit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/submit"/>

</GridLayout>
