<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:rowCount="6">

    <TextView
        android:id="@+id/account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/account_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/account_num"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:inputType="text"/>

    <TextView
        android:id="@+id/account_holder_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/account_holder_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/account_holder_name"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:inputType="text"/>

    <TextView
        android:id="@+id/deposit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/deposit_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/deposit"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/add_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/add_deposit_text"/>

</GridLayout>